# sashadym-pypi-example

./: pyproject.toml
.github/workflows/: publish.yml
tests/e2e/: test_e2e_example.py
