[tool.poetry]
name = "sashadym-pypi-example"
version = "0.1.0"
description = "test package for pypi"
authors = ["Aleksandr Dymchenko <av.dymchenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
